tests/miniJava/neg/000102_mutation.MiniJava
class java { public java static void Main ( String [ ] java ) { { } } }
